Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Example_Payment__c/Demo_Stripe_Example_Payment__c.object-meta.xml
<CustomObject>
    <label>Demo Stripe Example Payment</label>
    <nameField>
        <label>Demo Stripe Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Stripe Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>