Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Example_Payment__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <label>OrderID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>