Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Example_Payment__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>PaymentType</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>