Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Example_Payment__c/fields/Stripe_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Dashboard__c</fullName>
    <label>Stripe Dashboard</label>
    <type>Url</type>
</CustomField>