Payments-On-Every-Surface/force-app/main/default/objects/Demo_Stripe_Example_Payment__c/fields/Stripe_PaymentIntent_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_PaymentIntent_ID__c</fullName>
    <label>Stripe PaymentIntent ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>